--- a/contact.html
+++ b/contact.html
@@ -16,41 +16,35 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title w-100 text-center">Contact us</h5>
+                        <h5 class="modal-title w-100 text-center">&#9993; Contact us &#9993;</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body border-bottom-0">
-                        <form id = "contact" action = "index.html">
+                        <div class="text-center">
                             <p>Thank you for reaching out to us!</p>
-                            <p>Our team will get in touch with you soon</p>
-                            <table>
-                                <tr>
-                                    <th><label for = "name">Name</label></th>
-                                    <td>&emsp;:&emsp;</td>
-                                    <td><input id ="name" type = "text" name = "name" required placeholder="Jose Markose"></td>
-                                </tr>
-                                <tr>
-                                    <th><label for = "email">Email</label></th>
-                                    <td>&emsp;:&emsp;</td>
-                                    <td><input id ="email" type = "email" name = "email" required placeholder="yourname@email.com"></td>
-                                </tr>
-                                <tr>
-                                    <th><label for = "phone">Mobile</label></th>
-                                    <td>&emsp;:&emsp;</td>
-                                    <td><input id ="phone" type ="text" name = "phone" required placeholder="(+91)__________"></td>
-                                </tr>
-                            </table>
-                            <br>
+                            <p>Our team will get in touch with you soon &#128515;</p>
+                        </div>
+                        <form id = "contact-form" action = "index.html">
+                                <div class="form-group">
+                                    <label for = "name">Name</label>
+                                    <input id ="name" class="form-control" type = "text" name = "name" required placeholder="Jose Markose">
+                                </div>
+                                <div class="form-group">
+                                    <label for = "email">Email</label>
+                                    <input id ="email" class="form-control" type = "email" name = "email" required placeholder="yourname@email.com">
+                                </div>
+                                <div class="form-group">
+                                    <label for = "phone">Mobile</label>
+                                    <input id ="phone" class="form-control" type ="text" name = "phone" required placeholder="(+91)__________">
+                                </div>
                             <div class="text-center">
-                                <button class="btn btn-primary rounded-pill m-auto" type="submit" id="submit-btn" name="submit-contact">
+                                <button class="btn btn-primary rounded-pill ml-auto mr-auto" type="submit" id="contact-btn" name="submit-contact">
                                     <span>Contact me</span>
                                 </button>
                             </div>
                         </form>
-                    </div>
-                    <div class="modal-footer" border-0>
                     </div>
                 </div>
             </div>
