--- a/list.html
+++ b/list.html
@@ -5,9 +5,11 @@
             List
         </title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles/common.css" type="text/css">
         <link rel="stylesheet" href="styles/list.css" type="text/css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
+        <script src="https://kit.fontawesome.com/bb16adde44.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     </head>
@@ -34,7 +36,11 @@
                                     </div>
                                     <div >
                                         <h3>Radisson Blu</h3>
-                                        <p>5.0 star</p>
+                                        <i class="fas fa-star star-rate"></i>
+                                        <i class="fas fa-star star-rate"></i>
+                                        <i class="fas fa-star star-rate"></i>
+                                        <i class="fas fa-star star-rate"></i>
+                                        <i class="fas fa-star star-rate"></i>
                                         <p>New Delhi</p>
                                     </div>
                                 </a>
@@ -45,7 +51,11 @@
                                 </div>
                                 <div>
                                     <h3>The Lalit New Delhi</h3>
-                                    <p>4.5 star</p>
+                                    <i class="fas fa-star star-rate"></i>
+                                    <i class="fas fa-star star-rate"></i>
+                                    <i class="fas fa-star star-rate"></i>
+                                    <i class="fas fa-star-half-alt star-rate"></i>
+                                    <i class="fas fa-star"></i>
                                     <p>New Delhi</p>
                                 </div>
                             </div>
@@ -55,7 +65,11 @@
                                 </div>
                                 <div>
                                     <h3>Taj Palace</h3>
-                                    <p>4.0 star</p>
+                                    <i class="fas fa-star star-rate"></i>
+                                    <i class="fas fa-star star-rate"></i>
+                                    <i class="fas fa-star star-rate"></i>
+                                    <i class="fas fa-star star-rate"></i>
+                                    <i class="fas fa-star"></i>
                                     <p>New Delhi</p>
                                 </div>
                             </div>
