--- a/detail.html
+++ b/detail.html
@@ -5,9 +5,11 @@
             Detail
         </title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles/common.css" type="text/css">
         <link rel="stylesheet" href="styles/detail.css" type="text/css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
+        <script src="https://kit.fontawesome.com/bb16adde44.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     </head>
@@ -18,7 +20,26 @@
             </header>
             <main>  
                 <div id="detail-box">
-                    <div>   
+                    <div id="detail-carousel" class="carousel slide" data-ride="carousel" >
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block detail-img" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="image1">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block detail-img" src="https://media-cdn.tripadvisor.com/media/photo-o/01/fa/51/70/r-the-spa.jpg" alt="image2">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block detail-img" src="https://media-cdn.tripadvisor.com/media/photo-w/0e/b2/64/3f/radisson-blu-plaza-delhi.jpg" alt="image3">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#detail-carousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>   
+                        <a class="carousel-control-next" href="#detail-carousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                     <div>        
                         <form id="detail-form" action = "payment.html">
@@ -51,7 +72,11 @@
                     <div id="description">
                         <h3>Radisson Blu</h3>
                         <h4>Ratings</h4>
-                        <p>5 Star</p>
+                        <i class="fas fa-star star-rate"></i>
+                        <i class="fas fa-star star-rate"></i>
+                        <i class="fas fa-star star-rate"></i>
+                        <i class="fas fa-star star-rate"></i>
+                        <i class="fas fa-star star-rate"></i>
                         <h4>Features</h4>
                         <ul>
                             <li>Delicious Food</li>
