--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                                             <input id ="name" class="form-control" type = "text" name = "name" required placeholder="Jose Markose">
                                         </div>
                                         <div class="form-group">
-                                            <label for = "email">Email</label>
-                                            <input id ="email" class="form-control" type = "email" name = "email" required placeholder="yourname@email.com">
+                                            <label for = "email-contact">Email</label>
+                                            <input id ="email-contact" class="form-control" type = "email" name = "email" required placeholder="yourname@email.com">
                                         </div>
                                         <div class="form-group">
                                             <label for = "phone">Mobile</label>
