--- a/detail.html
+++ b/detail.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>
             Detail
         </title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles/common.css" type="text/css">
         <link rel="stylesheet" href="styles/detail.css" type="text/css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
         <script src="https://kit.fontawesome.com/bb16adde44.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -41,7 +42,7 @@
                             <span class="sr-only">Next</span>
                         </a>
                     </div>
-                    <div>        
+                    <div id="form-div">        
                         <form id="detail-form" action = "payment.html">
                             <div>
                                 <label for = "number-adults">No. of Adults: </label>
@@ -67,8 +68,8 @@
                                 <button id = "book" type="submit"value="1" name = "book" class="btn btn-outline-success">Book rooms</button>
                             </div>
                         </form>
-                        </div>
                     </div>
+                </div>
                     <div id="description">
                         <h3>Radisson Blu</h3>
                         <h4>Ratings</h4>
@@ -133,12 +134,12 @@
                                     </div>
                                     <form id = "contact-form" action = "index.html">
                                             <div class="form-group">
-                                                <label for = "name">Name</label>
-                                                <input id ="name" class="form-control" type = "text" name = "name" required placeholder="Jose Markose">
+                                                <label for = "name-contact">Name</label>
+                                                <input id ="name-contact" class="form-control" type = "text" name = "name" required placeholder="Jose Markose">
                                             </div>
                                             <div class="form-group">
-                                                <label for = "email">Email</label>
-                                                <input id ="email" class="form-control" type = "email" name = "email" required placeholder="yourname@email.com">
+                                                <label for = "email-contact">Email</label>
+                                                <input id ="email-contact" class="form-control" type = "email" name = "email" required placeholder="yourname@email.com">
                                             </div>
                                             <div class="form-group">
                                                 <label for = "phone">Mobile</label>
