--- a/payment.html
+++ b/payment.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>
             Payment
         </title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="styles/common.css" type="text/css">
         <link rel="stylesheet" href="styles/payment.css" type="text/css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     </head>
@@ -91,8 +92,8 @@
                                             <input id ="name" class="form-control" type = "text" name = "name" required placeholder="Jose Markose">
                                         </div>
                                         <div class="form-group">
-                                            <label for = "email">Email</label>
-                                            <input id ="email" class="form-control" type = "email" name = "email" required placeholder="yourname@email.com">
+                                            <label for = "email-contact">Email</label>
+                                            <input id ="email-contact" class="form-control" type = "email" name = "email" required placeholder="yourname@email.com">
                                         </div>
                                         <div class="form-group">
                                             <label for = "phone">Mobile</label>
