--- a/index.html
+++ b/index.html
@@ -39,7 +39,19 @@
               </div>
               <div  id="calcutta-img">
                   <div class="card-overlay">Calcutta</div>
-              </div>  
+              </div>
+              <div  id="chennai-img">
+                <div class="card-overlay">Chennai</div>
+              </div>
+              <div  id="agra-img">
+                  <div class="card-overlay">Agra</div>
+              </div>
+              <div  id="jaipur-img">
+                  <div class="card-overlay">Jaipur</div>
+              </div>
+              <div  id="bengaluru-img">
+                  <div class="card-overlay">Bengaluru</div>
+              </div> 
             </div>
             <div id="view-more">
               <button class="btn btn-secondary"><a href = "index.html">View more &gt; &gt;</a></button>
