--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
             <form id="login-form" action = "index.html">
               <div class="form-group">
                 <label for ="email">Email Address</label>
-                <input id="email" name="email" type="email" class="form-control" required placeholder="yourname@email.com" autocomplete="off">
+                  <input id="email" name="email" type="email" class="form-control" required placeholder="yourname@email.com" autocomplete="off">
               </div>
               <div class="form-group">
                 <label for ="password" >Password</label>
@@ -37,7 +37,7 @@
                 <input type="checkbox" class="form-check-input" id="remember">
                 <label class="form-check-label" for="remember">Remember me</label>
               </div>
-              <button class="btn btn-primary btn-block rounded-pill" type="submit" name="submit" >Login</button>
+              <button id="login-btn" class="btn btn-primary btn-block rounded-pill" type="submit" name="submit" >Login</button>
             </form>
           </div>
         </div>
