--- a/detail.html
+++ b/detail.html
@@ -21,7 +21,7 @@
         <!-- Carousel of hotel images -->
         <div id="detail-carousel" class="carousel slide" data-ride="carousel" >
           <div class="carousel-inner">
-            <div class="carousel-item active">
+            <!-- <div class="carousel-item active">
               <img class="d-block detail-img" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Hotel photos">
             </div>
             <div class="carousel-item">
@@ -29,7 +29,7 @@
             </div>
             <div class="carousel-item">
               <img class="d-block detail-img" src="https://media-cdn.tripadvisor.com/media/photo-w/0e/b2/64/3f/radisson-blu-plaza-delhi.jpg" alt="Hotel photos">
-            </div>
+            </div> -->
           </div>
           <a class="carousel-control-prev" href="#detail-carousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -48,8 +48,8 @@
               <input id = "number-adults" type = "number" min = "1" max = "999" name = "adults" required>
             </div>
             <div>
-              <label for = "name">Name: </label>
-              <input id = "name" type ="text" maxlength="50" name = "host-name" required>
+              <label for = "name-book">Name: </label>
+              <input id = "name-book" type ="text" maxlength="50" name = "host-name" required>
             </div>
             <div>
               <label for = "checkin-date">Check-in date: </label></th>
@@ -70,22 +70,7 @@
         </div>
       </div>
       <div id="description">
-        <h3>Radisson Blu</h3>
-        <h4>Ratings</h4>
-        <!-- Stars to show rating -->
-        <i class="fas fa-star star-rate"></i>
-        <i class="fas fa-star star-rate"></i>
-        <i class="fas fa-star star-rate"></i>
-        <i class="fas fa-star star-rate"></i>
-        <i class="fas fa-star star-rate"></i>
-        <h4>Features</h4>
-        <ul>
-          <li>Delicious Food</li>
-          <li>Hygenic</li>
-          <li>Excellant Service</li>
-        </ul>
-        <h4>Description</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <!-- hotel details -->
       </div>
       <!-- Login modal -->
       <div class="modal fade" id="loginModal" data-backdrop="static"></div>
