--- a/index.html
+++ b/index.html
@@ -24,31 +24,45 @@
               </div>
             </div>
             <div id="citycards">
-              <div  id="delhi-img" class="card-set-1">
-                <a href = "list.html" target = "_blank">
+              <div  id="delhi-img" class="card-set card-set-1">
+                <!-- <a href = "list.html" target = "_blank"> -->
                   <div class="card-overlay">Delhi</div>
-                </a>
+                <!-- </a> -->
               </div>
-              <div  id="goa-img" class="card-set-1">
+              <div  id="goa-img" class="card-set card-set-1">
+                <!-- <a href = "list.html" target = "_blank"> -->
                   <div class="card-overlay">Goa</div>
+                <!-- </a> -->
               </div>
-              <div  id="charminar-img" class="card-set-1">
+              <div  id="charminar-img" class="card-set card-set-1">
+                <!-- <a href = "list.html" target = "_blank"> -->
                   <div class="card-overlay">Charminar</div>
+                <!-- </a> -->
               </div>
-              <div  id="calcutta-img" class="card-set-1">
-                  <div class="card-overlay">Calcutta</div>
+              <div  id="kolkata-img" class="card-set card-set-1">
+                <!-- <a href = "list.html" target = "_blank"> -->
+                  <div class="card-overlay">Kolkata</div>
+                <!-- </a> -->
               </div>
-              <div  id="chennai-img" class="card-set-2">
+              <div  id="chennai-img" class="card-set card-set-2">
+                <!-- <a href = "list.html" target = "_blank"> -->
                 <div class="card-overlay">Chennai</div>
+              </a>
               </div>
-              <div  id="agra-img" class="card-set-2">
+              <div  id="agra-img" class="card-set card-set-2">
+                <!-- <a href = "list.html" target = "_blank"> -->
                   <div class="card-overlay">Agra</div>
+                <!-- </a> -->
               </div>
-              <div  id="jaipur-img" class="card-set-2">
+              <div  id="jaipur-img" class="card-set card-set-2">
+                <!-- <a href = "list.html" target = "_blank"> -->
                   <div class="card-overlay">Jaipur</div>
+                <!-- </a> -->
               </div>
-              <div  id="bengaluru-img" class="card-set-2">
+              <div  id="bengaluru-img" class="card-set card-set-2">
+                <!-- <a href = "list.html" target = "_blank"> -->
                   <div class="card-overlay">Bengaluru</div>
+                <!-- </a> -->
               </div> 
             </div>
             <div id="view-more">
