--- a/list.html
+++ b/list.html
@@ -29,53 +29,6 @@
           <div class="tab-content">
             <div id="list-view" class="tab-pane fade show active">
               <!-- Hotel cards -->
-              <div  id = "rad-card">
-                <a class="hotel-card" href = "detail.html">
-                  <div>
-                    <img src = "https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt = "Radisson Blu">
-                  </div>
-                  <div class="hotel-desc">
-                    <h3>Radisson Blu</h3>
-                    <!-- Stars to show rating -->
-                    <i class="fas fa-star star-rate"></i>
-                    <i class="fas fa-star star-rate"></i>
-                    <i class="fas fa-star star-rate"></i>
-                    <i class="fas fa-star star-rate"></i>
-                    <i class="fas fa-star star-rate"></i>
-                    <p>New Delhi</p>
-                  </div>
-                </a>
-              </div>
-              <div class="hotel-card" id = "lalit-card">
-                <div>
-                  <img src = "https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt = "The Lalit Hotel">
-                </div>
-                <div class="hotel-desc">
-                  <h3>The Lalit New Delhi</h3>
-                  <!-- Stars to show rating -->
-                  <i class="fas fa-star star-rate"></i>
-                  <i class="fas fa-star star-rate"></i>
-                  <i class="fas fa-star star-rate"></i>
-                  <i class="fas fa-star-half-alt star-rate"></i>
-                  <i class="fas fa-star"></i>
-                  <p>New Delhi</p>
-                </div>
-              </div>
-              <div class="hotel-card" id = "taj-card">
-                <div>
-                  <img src = "https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt = "Taj Palace">
-                </div>
-                <div class="hotel-desc">
-                  <h3>Taj Palace</h3>
-                  <!-- Stars to show rating -->
-                  <i class="fas fa-star star-rate"></i>
-                  <i class="fas fa-star star-rate"></i>
-                  <i class="fas fa-star star-rate"></i>
-                  <i class="fas fa-star star-rate"></i>
-                  <i class="fas fa-star"></i>
-                  <p>New Delhi</p>
-                </div>
-              </div>
             </div>
             <!-- Map view -->
             <div id="map-view" class="tab-pane fade">
@@ -92,5 +45,6 @@
       </footer>
     </div>
     <script src="scripts/common.js"></script>
+    <script src="scripts/list.js"></script>
   </body>
 </html>
