--- a/payment.html
+++ b/payment.html
@@ -17,24 +17,19 @@
     <main>
       <!-- Hotel details -->
       <div id="payment-hotel">
-        <img class = "payment-img" src = "https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt = "Radisson Blu">
-        <div>
-          <h2>Radisson Blu Hotel</h2>
-          <span>#38 of 1289 hotels in New Delhi</span>
-          <span>National Highway 8, New Delhi 110017 India</span>
-        </div>
+        <!-- Script updation -->
       </div>
       <!-- Bill details -->
       <div id="bill">
         <div id="payment-details">
-          <p><span>Name:</span> Gibin Ninan</p>
-          <p><span>Number of Adults:</span> 2</p>
-          <p><span>Check-in Date:</span> 06-06-2020</p>
-          <p><span>Check-out Date:</span> 08-06-2020</p>
+          <p><span>Name:</span><span id ="name-detail"></span></p>
+          <p><span>Number of Adults:</span><span id ="adults-detail"></span></p>
+          <p><span>Check-in Date:</span><span id ="checkin-detail"></span></p>
+          <p><span>Check-out Date:</span><span id ="checkout-detail"></span></p>
         </div>    
         <div id="tariff">
-          <p><span>Tariff Breakdown:</span> Rs.1000 x 2 Adults x 2 Nights</p>
-          <p><span>Total Answer:</span> Rs.4000</p>
+          <p><span>Tariff Breakdown:</span><span id ="tariff-detail"></span></p>
+          <p><span>Total Answer:</span><span id ="total-detail"></span></p>
         </div>
         <div>
           <!-- TODO: button to be enabled after user is logged in -->
